--- a/projetos/src/main/resources/application.properties
+++ b/projetos/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port= 9091
+spring.datasource.url=jdbc:h2:~/BancoCid
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.generate-ddl=true
